# cpp-seminars

./: README.md
sem11/: CMakeLists.txt
sem11/contest1/: CMakeLists.txt
sem11/contest1/B/: main.cpp
sem11/contest2/: CMakeLists.txt
sem16/: copy.cpp  vector_it.cpp
sem17/: copy.cpp  stream.cpp
sem25/: main.cpp  tuple.cpp  variant.cpp
sem9/: input.txt  main.cpp  type.cpp
